--- a/Test/home/templates/home/welcome.html
+++ b/Test/home/templates/home/welcome.html
@@ -1,6 +1,7 @@
 <html>
     <header><title>SmartNotes!</title></header>
 
-    <body><h1>Welcome to Smartnotes</h1></body>
+    <body><h1>Welcome to Smartnotes</h1>
     <p> Today is {{today}}</p>
+    </body>
 </html>
