--- a/Test/notes/templates/notes/notes_list.html
+++ b/Test/notes/templates/notes/notes_list.html
@@ -1,9 +1,12 @@
-<html>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>These are the Notes:</h1>
 
     <ul>
-        {% for note in notes%}
-        <li>{{note.title}}</li>
+        {% for note in notes %}
+        <li class="note-li"> {{note.title}} </li>
         {% endfor %}
     </ul>
-</html>
+
+    {% endblock %}
