--- a/Test/static/templates/base.html
+++ b/Test/static/templates/base.html
@@ -1,13 +1,17 @@
 {% load static %}
+<!DOCTYPE html>
 
 <html> 
     <head>
         <title>SmartNotes!</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
-    <body> 
-        <div class="my-5 text-center container">
+    <body>
+        <div class ="my-5 text-center container">
         {% block content %}
+        
+        
         {% endblock %}
+        </div>
     </body>
 </html>
